2011-12-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/serial/mc68681.c (mc68681_open): 
	Var "status" needs to be signed.

2011-12-05	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1975/misc
	* libchip/ide/ata.c, libchip/ide/ata_util.c: Fixed warnings.

2011-12-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/ide/ata.c: Make ata_interrupt_handler static.
	* libchip/ide/ide_controller.c: Include libchip/ide_ctrl.h.
	* libchip/display/disp_hcms29xx.c: Add missing initializer.

2011-11-09	Jennifer Averett <jennifer.averett@oarcorp.com>

	PR 1934/bsps
	* libchip/serial/ns16550.c: Change to unsigned variable.

2011-11-07	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/serial/serial.h: Declare Console_Port_Minor.

2011-11-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1945/cpukit
	* libchip/i2c/spi-memdrv.c: Replace rtems_off64_t with off_t.

2011-10-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1944/misc
	* libchip/serial/mc68681.c: Remove #if 0.

2011-10-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/serial/ns16550.c (ns16550_init): 
	Remove unused var "ucTrash".

2011-10-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/network/smc91111.c (lan91cxx_recv):
	Define var "lp" conditionally (Avoid warning).

2011-10-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/network/dec21140.c (dec21140_rxDaemon):
	Remove unused var "tbase".
	* libchip/rtc/mc146818a.c (mc146818a_initialize): 
	Remove unused var "getReg".
	* libchip/rtc/mc146818a.c (mc146818a_set_time): 
	Remove unused var "getReg".

2011-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/display/disp_hcms29xx.c: Remove ARRAY_COUNT (unused).

2011-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1940/misc:
	* libchip/serial/ns16550.c: Reflect changes to console-driver.

2011-10-19	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/network/smc91111.c: Use PRIxPTR to print pointers.
