@@ -1,5 +1,10 @@
 2011-12-06	Ralf Corsépius <ralf.corsepius@rtems.org>
 
+	* libchip/ide/ata.c: Make ata_interrupt_on, ata_interrupt_off,
+	ata_interrupt_isOn static.
+
+2011-12-06	Ralf Corsépius <ralf.corsepius@rtems.org>
+
 	* libchip/serial/mc68681.c (mc68681_open): 
 	Var "status" needs to be signed.
 
